--- a/html/mie/css/output/patterns/0-navigation.css
+++ b/html/mie/css/output/patterns/0-navigation.css
@@ -42,7 +42,7 @@
     color: #ffffff;
     float: left; }
 
-.main-nav {
+2 .main-nav {
   font-size: 1em;
   z-index: 100; }
 
@@ -167,15 +167,14 @@
     text-align: center;
     width: 100%;
     background-color: #412773;
-    padding: 1em 5% 1em 5%;
+    padding: 1.1em 5% 1.2em 5%;
     color: #ffffff; }
   .main-nav li {
     z-index: 100;
     height: 3.6em;
     padding: 0;
     text-align: center;
-    float: left;
-    border-bottom: 0.1em solid #3b5790; }
+    float: left; }
     .main-nav li:nth-child(1) {
       width: 25%;
       /*  padding: 0;
@@ -187,7 +186,7 @@
       padding: 0; }
       .main-nav li:nth-child(1) a, .main-nav li:nth-child(5) a {
         width: 100%;
-        padding: 0.8em 5% 1em 5%; }
+        padding: 0.9em 5% 1em 5%; }
     .main-nav li:nth-child(2) {
       width: 37%; }
     .main-nav li:nth-child(3) {
@@ -205,7 +204,7 @@
     min-width: 50%; }
   .js .main-nav .parent-item {
     float: none;
-    padding-top: 0.8em; }
+    padding-top: 0.9em; }
   .js .main-nav .parent .sectiontoggle {
     padding-top: 0.3em;
     margin-right: 10%; }
@@ -215,7 +214,7 @@
     -webkit-overflow-scrolling: touch;
     min-width: 33.333%;
     position: absolute;
-    margin-top: 0.35em;
+    margin-top: 0.39em;
     text-align: left; }
     .js nav.nav-collapse .sub-menu.open li a {
       padding: 0.7em 1.5em 0.7em 1em; }
@@ -226,7 +225,8 @@
     width: 100%;
     float: none;
     height: auto;
-    text-align: left; }
+    text-align: left;
+    border: none; }
     .main-nav .sub-menu li:nth-child(4) {
       background-color: #2a194b; }
       .main-nav .sub-menu li:nth-child(4):hover {
@@ -236,7 +236,7 @@
       .main-nav .sub-menu li:nth-child(5):hover {
         background-color: #24153f; } }
 
-@media only all and (min-width: 56em) {
+@media only all and (min-width: 59em) {
   nav {
     background-color: #140431;
     margin: 0 0 0 0;
@@ -252,7 +252,7 @@
     margin-right: 2.5%;
     padding: 0.4em 0 1.2em 0;
     background-color: inherit;
-    height: auto;
+    height: 100%;
     float: left;
     border-bottom: none; }
     .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
@@ -266,27 +266,23 @@
     .main-nav li a {
       height: auto; }
     .main-nav li:nth-child(1) {
-      width: 10%; }
+      width: 12%; }
     .main-nav li:nth-child(2) {
-      width: 22%; }
+      width: 20%; }
     .main-nav li:nth-child(3) {
-      width: 27%; }
+      width: 20%; }
     .main-nav li:nth-child(4) {
-      width: 13%; }
+      width: 20%; }
     .main-nav li:nth-child(5) {
       width: 18%;
       margin-right: 0; }
-  .main-nav li .icon-lock-white {
-    float: none;
-    background-size: 1em 1.375em;
-    margin: 0 auto 0.5em auto; }
   .main-nav li a, .main-nav .parent-item {
     text-align: center;
     width: 100%;
     max-width: 100%;
     padding-left: 0; }
-  .main-nav li.home a, .main-nav li.about a {
-    margin-top: 1.875em; }
+  .main-nav li.home a, .main-nav li.browse-films a {
+    margin-top: 0.375em; }
   .js .main-nav .parent .sectiontoggle {
     float: none;
     padding: 0;
@@ -296,32 +292,53 @@
   .main-nav .sub-menu {
     visibility: hidden;
     position: absolute;
-    left: auto;
-    margin-top: 5.9em;
-    left: auto;
-    width: 25%; }
+    margin-top: 1.2em;
+    left: 0;
+    width: 100%; }
     .main-nav .sub-menu a {
       height: auto; }
   .main-nav li:hover .sub-menu {
+    background-color: #412773;
     display: block;
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 1.1em;
-    left: auto;
+    margin-top: 1.2em;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    padding: 0.4em 4% 0.4em 4%; }
+  .main-nav .sub-menu li a {
+    font-size: 1.1em;
+    width: 100%; }
+    .main-nav .sub-menu li a:before {
+      content: none; }
+    .main-nav .sub-menu li a:after {
+      content: " »"; }
+  .js nav.nav-collapse .main-nav ul.sub-menu li {
     width: auto;
-    max-width: 30%;
-    margin-left: 0.8em; }
-    .main-nav li:hover .sub-menu li a {
-      padding: 0.6em 1em 0.6em 1em; }
-  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
-    min-width: 30%;
-    max-width: 30%; }
+    text-align: center;
+    display: inline-block;
+    background-color: #412773;
+    padding: 0;
+    margin: 0 2% 0 2%;
+    float: none; }
+    .js nav.nav-collapse .main-nav ul.sub-menu li a {
+      padding: 0.4em 0.5em 0.4em 0.5em; }
+    .js nav.nav-collapse .main-nav ul.sub-menu li:hover a {
+      text-decoration: underline;
+      background-color: #140431; }
+  .js nav.nav-collapse .main-nav ul.sub-menu li a {
+    width: 100%;
+    text-align: center;
+    background-color: #412773; }
   .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 1.1em 0 0 0.8em;
-    min-width: initial; }
-    .js nav.nav-collapse .main-nav ul.sub-menu.open li a {
-      padding: 0.6em 1em 0.6em 1em; }
+    margin: 1.2em 0 0 0;
+    padding: 0.4em 4% 0.4em 4%;
+    text-align: center;
+    min-width: initial;
+    background-color: #412773; }
   .main-nav .sub-menu li {
     height: auto;
     width: 100%;
@@ -337,61 +354,8 @@
     width: auto;
     text-align: left;
     margin: 0; }
-  .main-nav .sub-menu li .icon-lock-white {
-    float: left;
-    display: inline-block;
-    margin: 0 0.6em 0 0; } }
-
-@media only all and (min-width: 64em) {
-  .main-nav li {
-    text-align: left;
-    font-size: 0.9em;
-    font-weight: 400;
-    margin-right: 2.5%;
-    padding: 0.4em 0 1.2em 0;
-    background-color: inherit;
-    height: auto;
-    float: left;
-    border-bottom: none; }
-    .main-nav li:nth-child(2n) {
-      background-color: inherit; }
-    .main-nav li:last-child {
-      margin-right: 0; }
-    .main-nav li a {
-      height: auto; }
-    .main-nav li:nth-child(1) {
-      width: 10%; }
-    .main-nav li:nth-child(2) {
-      width: 22%; }
-    .main-nav li:nth-child(3) {
-      width: 27%; }
-    .main-nav li:nth-child(4) {
-      width: 13%; }
-    .main-nav li:nth-child(5) {
-      width: 18%;
-      margin-right: 0; }
-  .main-nav li .icon-lock-white {
-    float: none;
-    background-size: 1em 1.375em;
-    margin: 0 auto 0.5em auto; }
-  .main-nav li a, .main-nav .parent-item {
-    text-align: center;
-    width: 100%;
-    max-width: 100%;
-    padding-left: 0; }
-  .main-nav li.home a, .main-nav li.about a {
-    margin-top: 1.875em; }
-  .js nav.nav-collapse .main-nav li .sub-menu, .js nav.nav-collapse .main-nav li .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
-    min-width: auto;
-    width: 23%; }
-  .main-nav li.home .sub-menu a, .main-nav li.about .sub-menu a {
-    margin-top: 0; }
-  .js .main-nav .parent .sectiontoggle {
-    float: none;
-    padding: 0;
-    display: block;
-    width: 100%;
-    margin: 0; } }
+  .js nav.nav-collapse .main-nav li:nth-child(3) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(2) .sub-menu.open {
+    width: 100%; } }
 
 @media only all and (min-width: 71.25em) {
   .main-nav li {
@@ -402,74 +366,43 @@
       float: left; }
     .main-nav li:nth-child(1) {
       width: 8%;
-      margin-right: 7%; }
-    .main-nav li:nth-child(1) a, .main-nav li:nth-child(4) a {
-      padding-bottom: 1.4em; }
+      margin-right: 5%; }
     .main-nav li:nth-child(2) {
-      width: 17%;
-      margin-right: 6%; }
+      width: 18%;
+      margin-right: 7%; }
       .main-nav li:nth-child(2) a {
         width: 85%; }
     .main-nav li:nth-child(3) {
-      width: 19%;
-      margin-right: 7%; }
+      width: 16%;
+      margin-right: 8%; }
     .main-nav li:nth-child(4) {
       width: 15%;
       margin-right: 7%; }
     .main-nav li:nth-child(5) {
-      width: 8%;
+      width: 16%;
       margin-right: 0; }
       .main-nav li:nth-child(5) a {
         width: 85%; }
-  .main-nav .parent-item {
+  .js .main-nav .parent-item {
     width: 80%;
-    text-align: left; }
+    text-align: left;
+    padding-top: 0.6em; }
   .nav-collapse .main-nav {
-    height: 4.5em; }
-  .main-nav li .icon-lock-white {
-    float: left;
-    background-size: 1em 1.375em;
-    margin: 0 0.7em 0.5em 0; }
-  .main-nav li.home a, .main-nav li.about a {
+    height: 3.4em; }
+  .main-nav li.home a, .main-nav li.browse-films a {
     margin-top: 0; }
   .js nav.nav-collapse .main-nav ul.sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 4.6em 0 0 0; }
+    margin: 0.3em 0 0 0;
+    width: 100%; }
   .js .main-nav .parent .sectiontoggle {
-    float: left;
+    float: right;
     padding: 0;
     display: inline-block;
     width: 10%;
     margin: 0.5em 0 0 0; } }
 
 @media only all and (min-width: 74em) {
-  .main-nav li:nth-child(1) {
-    width: 8%;
-    margin-right: 8%; }
-  .main-nav li:nth-child(2) {
-    width: 15%;
-    margin-right: 7%; }
-    .main-nav li:nth-child(2) a {
-      width: 85%; }
-  .main-nav li:nth-child(3) {
-    width: 19%;
-    margin-right: 6%; }
-    .main-nav li:nth-child(3) .parent-item {
-      width: 70%;
-      max-width: 8.5em; }
-  .main-nav li:nth-child(4) {
-    width: 15%;
-    margin-right: 7%; }
-    .main-nav li:nth-child(4) .parent-item {
-      width: 70%;
-      max-width: 7em; }
-  .main-nav li:nth-child(5) {
-    width: 14%;
-    margin-right: 0; }
-    .main-nav li:nth-child(5) a {
-      width: 85%;
-      max-width: 7.8em;
-      padding-bottom: 2em; }
-    .main-nav li:nth-child(5) .sub-menu a {
-      max-width: 100%; } }
+  .js .main-nav {
+    max-width: 69.57em; } }
 
 /*# sourceMappingURL=0-navigation.css.map */
